k8s/infrastructure/controllers/authelia/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authelia-https-headers
  namespace: authelia
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: https
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authelia
  namespace: authelia
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`auth.scrimreaper.dev`)
      middlewares:
        - name: authelia-https-headers
      services:
        - kind: Service
          name: authelia
          port: 80
